# tmux-ssh

./: .gitignore  .tmux.conf  Cargo.toml  GEMINI.md  IDEAL_PATH.md  README.md  install.sh  main-bk.rs  setup.sh  test_tmux.sh  tmux-bw-ssh.tmux  tmux-ssh-install.sh
dummy_bin/: ssh
scripts/: insert.sh
src/: auth.rs  config.rs  docker.rs  main.rs  models.rs  prompts.rs  sftp.rs  snippets.rs  ssh.rs  vault.rs
