[package]
name = "zbw"
version = "0.1.0"
edition = "2021"

[dependencies]
# Bitwarden SDK
bitwarden = { version = "2.0.0", features = ["secrets"] }
bitwarden-core = { version = "2.0.0", features = ["internal"] }
bitwarden-api-api = "2.0.0"
bitwarden-crypto = "2.0.0"
bitwarden-encoding = "2.0.0"

# Async & HTTP
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Interfață
skim = "0.10"
dialoguer = "0.11"
console = "0.15"

# Utilitare
rayon = "1.8"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }

# Execuție procese
shell-words = "1.1"
uuid = { version = "1.0", features = ["serde", "v4"] }
base64 = "0.22"
thiserror = "2.0.18"
